# clawguard

./: .gitignore  LICENSE  README.md  pyproject.toml
src/clawguard/: __init__.py  cli.py  models.py  patterns.py  reporter.py  scanner.py
src/clawguard/checks/: __init__.py  credentials.py  gateway.py  memory.py  permissions.py  sandbox.py  skills.py  version.py
tests/fixtures/: insecure_config.json  secure_config.json
tests/fixtures/malicious_skill/: SKILL.md
